# job-matcher

.venv310/Scripts/: activate  activate.bat
data/: .linkedin_cookies.pkl  resume.docx
job_scraper/: .env.example  .env.template  .gitignore  ARCHITECTURE.md  COPILOT.md  IMPLEMENTATION_PLAN.md  PHASE2_COMPLETE.md  PROJECT_STRUCTURE.md  README.md  SETUP.md  TEST_USE_CASES.md  __init__.py  debug_llm_gpt5nano.py  debug_page.html  debug_scraper.py  demo_linkedin_connect_message_test.py  job_finder.py  models.py  people_page_1767992754.html  people_page_1767996355.html  people_page_1769802245.html  people_page_1769802553.html  people_page_1770006396.html  people_page_1770069069.html  people_page_1770151605.html  people_page_1770153550.html  people_page_1770154733.html  people_page_1770155990.html  people_page_1770162297.html  people_page_1770162621.html  people_page_1770338694.html  people_page_1770426543.html  people_page_1770432195.html  people_page_1770508978.html  people_page_1770679189.html  people_page_1770772054.html  people_page_1770833966.html  people_page_1770834777.html  people_page_1771189637.html  people_page_1771285428.html  (+12 more)
job_scraper/.github/workflows/: ci.yml
job_scraper/app/: job_finder.py
job_scraper/auth/: __init__.py  linkedin_auth.py  session_manager.py
job_scraper/cli/: main.py
job_scraper/config/: config.py  logging_utils.py
job_scraper/data/: .env.example  .linkedin_cookies.pkl  LLM_Base_Score_2.txt  LLM_base_score.example.txt  LLM_base_score.txt  LLM_rerank_score.example.txt  LLM_rerank_score.txt  company_blocklist.example.json  company_blocklist.json  jobs.csv  jobs.example.csv  linkedin_connections.csv  linkedin_connections.example.csv  resume.example.txt  roles.example.json  roles.json  sponsorship_prompt.txt
job_scraper/filtering/: __init__.py  blocklist.py
job_scraper/matching/: __init__.py  hr_checker.py  match_scorer.py  resume_loader.py  sponsorship_filter.py
job_scraper/networking/: __init__.py  connection_requester.py  people_finder.py
job_scraper/notifications/: __init__.py  email_notifier.py
job_scraper/project_config/: .env.template  pixi.toml  pyproject.toml  requirements.txt
job_scraper/project_config/data/: jobs.csv  jobs.xlsx
job_scraper/scheduler/: __init__.py  job_scraper_scheduler.py
job_scraper/scrapers/: __init__.py  base_scraper.py  linkedin_scraper.py
job_scraper/scraping/: __init__.py  base_scraper.py  job_detail_scraper.py  job_list_scraper.py  linkedin_scraper.py  search_builder.py
job_scraper/scripts/: debug_scraper.py  debug_smtp.py  test_linkedin_login.py  test_phase2_manual.py  test_phase7_email.py  test_quick.py  test_resume_extraction.py  test_viewed_detection.py  test_viewed_jobs.py  test_viewed_results.txt
job_scraper/storage_pkg/: __init__.py  blocklist_store.py  matched_jobs_store.py
job_scraper/tests/: __init__.py  conftest.py  test_auth.py  test_config.py  test_job_finder_workflow.py  test_logging.py  test_phase2_scraping.py  test_phase3_filtering.py  test_phase4_sponsorship.py  test_phase5_matching.py  test_phase6_networking.py  test_phase6_storage.py  test_phase7_email.py  test_phase8_networking.py  test_phase8_scheduler.py  test_phase9_integration.py
job_scraper/utils/: csv_utils.py  model_utils.py  webdriver_utils.py
logs/: job_finder.log.2026-01-01  linkedin_auth_test.log.2025-12-30  linkedin_auth_test.log.2026-01-01
