[project]
name = "job-scraper"
version = "0.1.0"
description = "LinkedIn job scraper with LLM matching and Windows notifications"
authors = [
    {name = "Your Name Here", email = "your@email.com"} # Fill in your details
]
readme = "README.md" # Update as needed
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "selenium>=4.15.2",
    "python-dotenv>=1.0.0",
    "click>=8.1.7",
    "tabulate>=0.9.0",
    "openpyxl>=3.1.5",
    "openai>=1.52.0",
    "httpx>=0.24.1",
    "pypdf>=4.2.0",
    "win10toast>=0.9; sys_platform == 'win32'",
    "structlog>=24.4.0",
    "webdriver-manager>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "black>=23.0.0",
]

[project.scripts]
job-scraper = "app.job_finder:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["../tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["../app", "../auth", "../scraping", "../matching", "../filtering", "../networking", "../notifications", "../scheduler", "../storage_pkg", "../config"]
omit = ["*/tests/*", "*/__pycache__/*", "*/venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
exclude = ["../scrapers/", "../storage.py"]

[tool.black]
line-length = 100
target-version = ["py310"]
